name:                vinyl-generics
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/vinyl-generics
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Acme
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  ghc-options:         -Wall 
  hs-source-dirs:      src
  exposed-modules:     Data.Vinyl.Generics
                     , Data.Vinyl.Generics.Transform
  build-depends:       base >= 4.7 && < 5
                     , generics-sop 
                     , vinyl >= 0.10
                     , records-sop

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       LibSpec
  build-depends:       base
                     , vinyl-generics
                     , hspec
                     , hspec-core >=2.4.8
                     , QuickCheck
                     , generics-sop 
                     , text
                     , vinyl
                     , records-sop
                     

source-repository head
  type:     git
  location: https://github.com/githubuser/vinyl-generics
